--- a/index.css
+++ b/index.css
@@ -1,18 +1,18 @@
 h1 {
-    color: blueviolet;
-    font-size: 30px;
+	color: brown;
+	font-size: 30px;
 }
 
 p {
-    color: #3e3e3e;
+	color: #3e3e3e;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    text-align: center;
+	margin: 0;
+	padding: 0;
+	text-align: center;
 }
 
 h2 {
-    color: blue;
+	color: blue;
 }
